# AdventOfCode2024

./: README.md
Day 01/: CMakeLists.txt  output_part1.txt  output_part2.txt  part1.cpp  part2.cpp
Day 02/: CMakeLists.txt  output_part1.txt  output_part2.txt  part1.cpp  part2.cpp
Day 03/: CMakeLists.txt  output_part1.txt  output_part2.txt  part1.cpp  part2.cpp
Day 04/: CMakeLists.txt  output_part1.txt  output_part2.txt  part1.cpp  part2.cpp
Day 05/: output_part1.txt  output_part2.txt  part1.cpp  part2.cpp
Day 06/: output_part1.txt  output_part2.txt  part1.cpp  part2.cpp
Day 07/: CMakeLists.txt  output_part1.txt  output_part2.txt  part1.cpp  part2.cpp
Day 08/: CMakeLists.txt  output_part1.txt  output_part2.txt  part1.cpp  part2.cpp
Day 09/: CMakeLists.txt  output_part1.txt  part1.cpp  part2.cpp
Day 10/: CMakeLists.txt  output_part1.txt  output_part2.txt  part1.cpp  part2.cpp
Day 11/: CMakeLists.txt  output_part1.txt  output_part2.txt  part1.cpp  part2.cpp
Day 12/: CMakeLists.txt  part1.cpp  part2.cpp
Lib/: Lib.cpp  Lib.h  Lib.hpp
lib/: lib.cpp  lib.hpp
